# metrics

./: CHANGELOG.md  Dockerfile  Dockerfile.prod  Pipfile  README.md  docker-compose.yml  heroku.yml  pyproject.toml
.github/workflows/: ci.yml
project/: celery.py  settings.py
projects/: admin.py  models.py
projects/migrations/: 0001_initial.py  0002_auto_20200505_0843.py  0003_project_default_sprint_length_in_weeks.py  0004_project_number_team_members.py  0005_remove_project_number_team_members.py
sprints/: admin.py  models.py  services.py  tasks.py
sprints/migrations/: 0001_initial.py  0002_auto_20200505_0843.py  0003_sprint_project.py  0004_sprint_number_releases.py  0005_auto_20200506_1952.py  0006_sprint_number_team_members.py  0007_auto_20210222_1231.py  0008_remove_sprintmember_dedication_percentage.py
