[tool.poetry]
name = "metrics"
version = "0.1.0"
description = ""
authors = ["Javier Aguirre <contacto@javaguirre.net>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.12.2"
django-model-utils = "^4.1.1"
djangorestframework-jwt = "^1.11.0"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
Django = "^3.1.7"
django-sendgrid-v5 = "^0.9.0"
dj-database-url = "^0.5.0"
sentry-sdk = "^0.20.3"
django-storages = "^1.11.1"
boto3 = "^1.17.12"
newrelic = "^6.0.1"
celery = "^5.0.5"
django-jet = "^1.0.8"
psycopg2-binary = "^2.8.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
